--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "i": "^0.3.6",
     "moment": "^2.29.1",
     "next": "^10.0.6",
+    "next-i18next": "^8.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "remark": "^13.0.0",
